# play-with-openvsp

./: .gitignore  main.py  plane.ipynb  pyproject.toml  supersonic_delta_wing.py  test.py
src/: coupled_loads_analysis.py  ibrahim.py  structural_wing.py  supersonic_delta_wing.py  utils.py
